--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
     <ul class="navbar-nav d-lg-flex flex-lg-row text-left ml-1 mr-auto">
       <li class="nav-item active mr-3"> <a class="nav-link" href="index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
       <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="javascript:;" id="foodDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="javascript:;" id="foodDropdown" role="button" data-toggle="dropdown" aria-haspopup="fasle" class="dropdown-toggle">
           <i class="las la-cheese mr-1"></i>好美味
         </a>
+        
         <div class="dropdown-menu" aria-labelledby="foodDropdown">
+          <a class="dropdown-item" href="shop/index.html">好美味首頁</a>
           <a class="dropdown-item" href="javascript:;">協會專區</a>
           <a class="dropdown-item" href="javascript:;">中日式料理</a>
           <a class="dropdown-item" href="javascript:;">西式及南洋料理</a>
