--- a/neighborhood/traffic.html
+++ b/neighborhood/traffic.html
@@ -201,14 +201,23 @@
             <div class="row">
               <div class="col-md-3 mb-3">
                 <div class="card">
-                  <img class="card-img-top border-bottom" src="../assets/images/default-image.png" alt="Card image cap">
+                  <img class="card-img-top border-bottom" src="../assets/images/bus.png" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">房屋名稱</h5>
+                    <h5 class="card-title">復康巴士</h5>
+                    <p>02-27777777</p>
                     <p class="card-text">描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述.</p>
-                    <div class="text-right">
-                      <a href="#" class="card-link text-gray">刪除</a>
-                      <button data-toggle="modal" data-target="#infoModal" class="card-link btn-primary btn">詳細資訊</button>
-                    </div>
+                    <a target="_blank" href="https://0809080650.gov.taipei/" class="card-link btn-primary btn btn-block">前往</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 mb-3">
+                <div class="card">
+                  <img class="card-img-top border-bottom" src="../assets/images/ubike.png" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Youbike</h5>
+                    <p>02-27777777</p>
+                    <p class="card-text">描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述內容描述.</p>
+                    <a target="_blank" href="https://www.youbike.com.tw/region/main/stations/" class="card-link btn-primary btn btn-block">前往</a>
                   </div>
                 </div>
               </div>
