首頁新增合作店家列表

--- a/index.html
+++ b/index.html
@@ -324,6 +324,228 @@
       <!-- end card -->
     </div>
   </div>
+
+  <hr class="mt-5">
+  <!-- 商店總覧 -->
+  <div class="mb-4 text-center">
+    <h4><i class="las la-store mr-2"></i>合作店家列表</h4>
+  </div>
+  <div class="text-right">
+    <button class="btn btn-sm btn-outline-dark mb-3">更多</button>
+  </div>
+
+  <div class="row row-cols-xl-5 row-cols-md-3 row-cols-sm-2 row-cols-1 mb-3">
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-10.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a><a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主，是萬芳區最久之異國口味餐廳。自由開放舒適，還可以聽到全球衛星廣播！
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-08.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a><a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主，是萬芳區最久之異國口味餐廳。自由開放舒適，還可以聽到全球衛星廣播！
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-01.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-02.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-24.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-22.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-26.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-06.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-28.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-secondary btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+    <div class="col mb-3 px-1">
+      <div class="card h-100">
+        <a href="/shop/store.html"><img src="../assets/images/demo/p-20.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <div class="position-absolute pos-heart"> <a href="#" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="加入我的最愛"><i class="las la-heart m-0"></i></a> </div>
+          <h6 class="card-title mb-0"> <a href="/shop/store.html">商店名稱</a> </h6>
+          <div class="card-description mb-3">
+            <div class="mb-2">
+              <a href="category-2.html"><span class="badge bg-green text-white p-1 mr-1">商家分類</span></a>
+            </div>
+            <div class="tfs-13 text-digest-60">
+              本店以美式綜合口味、墨西哥及義大利食物為主
+            </div>
+          </div>
+          <div class="stars text-orange">
+            <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i>
+          </div>
+        </div>
+      </div>
+      <!-- end card -->
+    </div>
+  </div>
   
   
   <h3 class="text-center mb-4"><i class="las la-mobile mr-2"></i>APP</h3>
