--- a/neighborhood/volunteer copy.html
+++ b/neighborhood/volunteer copy.html
@@ -33,81 +33,27 @@
   </div>
   <!-- end nav-right -->
   
-  <div class="nav-main collapse navbar-collapse order-3 order-md-2" id="navbarContent">
+  <div class="nav-main collapse navbar-collapse order-3 order-xl-2" id="navbarContent">
     <ul class="navbar-nav d-lg-flex flex-lg-row text-left ml-1 mr-auto">
-      <li class="nav-item active mr-3"> <a class="nav-link" href="index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
-      <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="javascript:;" id="foodDropdown" role="button" data-toggle="dropdown" aria-haspopup="fasle" class="dropdown-toggle">
-          <i class="las la-cheese mr-1"></i>好美味
-        </a>
-        
-        <div class="dropdown-menu" aria-labelledby="foodDropdown">
-          <a class="dropdown-item" href="/shop/index.html">好美味首頁</a>
-          <a class="dropdown-item" href="javascript:;">協會專區</a>
-          <a class="dropdown-item" href="javascript:;">中日式料理</a>
-          <a class="dropdown-item" href="javascript:;">西式及南洋料理</a>
-          <a class="dropdown-item" href="javascript:;">點心宵夜及飲品</a>
-        </div>
-      </li>
-      <li class="nav-item mr-3"> <a class="nav-link" href="shop/index.html"><i class="las la-store-alt mr-1"></i>好商圈</a> </li>
-      <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="neighborhood/index.html" id="neighborhoodDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="las la-user-friends mr-1"></i>好社區</a>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="neighborhoodDropdown">
-          <a class="dropdown-item" href="/neighborhood/activity.html">里民通報</a>
-          <a class="dropdown-item" href="/neighborhood/rent.html">租屋資訊</a>
-          <a class="dropdown-item" href="/neighborhood/traffic.html">交通資訊</a>
-          <a class="dropdown-item" href="javascript:;">好上進</a>
-          <a class="dropdown-item" href="javascript:;">好安全</a>
-          <a class="dropdown-item" href="/neighborhood/volunteer.html">志工組織</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="health/index.html" id="healthDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="las la-heartbeat mr-1"></i>好健康</a> 
-        </a>
-        <div class="dropdown-menu" aria-labelledby="healthDropdown">
-          <a class="dropdown-item" href="health/wanfang-hospital.html">萬芳醫院專區</a>
-          <a class="dropdown-item" href="javascript:;">文山運動中心</a>
-          <a class="dropdown-item" href="health/health.html">健康園地</a>
-          <a class="dropdown-item" href="health/long-term-care.html">社區長照</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown mr-3">
-        <a class="nav-link dropdown-toggle" href="user/index.html" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="las la-user-circle mr-1"></i>會員專區</a> 
-        </a>
-        <div class="dropdown-menu" aria-labelledby="userDropdown">
-          <a class="dropdown-item" href="user/index.html">帳戶總覧</a>
-          <a class="dropdown-item" href="user/account.html">會員資訊</a>
-          <a class="dropdown-item" href="user/coupon-list.html">優惠卷查詢</a>
-          <a class="dropdown-item" href="user/notification.html">推播訊息</a>
-          <a class="dropdown-item" href="user/purchase.html">好美味訂購紀錄</a>
-        </div>
-      </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="../index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="../shop/index.html"><i class="las la-store-alt mr-1"></i>好商圈</a> </li>
+      <li class="nav-item active mr-3"> <a class="nav-link" href="../neighborhood/index.html"><i class="las la-user-friends mr-1"></i>好社區</a> </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="../health/index.html"><i class="las la-heartbeat mr-1"></i>好健康</a> </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="../security/index.html"><i class="las la-bullhorn mr-1"></i>好安全</a> </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="../education/index.html"><i class="las la-book-open mr-1"></i>好上進</a> </li>
+      <li class="nav-item mr-3"> <a class="nav-link" href="../wunshan/index.html"><i class="las la-gift mr-1"></i>文山好禮</a> </li>
     </ul>
-    <!-- end nav-main --> 
+    <!-- end nav-main -->
   </div>
+  <!-- end navbar-collapse --> 
 </nav>
 <div id="wrapper" class="pl-0">
   
   <!-- Page Content -->
   <div id="page-content-wrapper">
     <div class="container">
+      <a href="#menu-toggle" class="btn btn-outline-dark btn-sm mb-3" id="menu-toggle">社區選單</a>
       <h3 class="page-title text-center mb-4"><i class="las la-smile-beam mr-2"></i>志工招募</h3>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <select name="typeselect" id="typeselect" class="form-control">
-              <option>居家關懷</option>
-              <option>送餐服務</option>
-              <option>社區巡守</option>
-              <option>社區清潔</option>
-            </select>
-          </div>
-        </div>
-      </div>
       <div class="card card-body tfs-13 mb-4 shadow">
         <div class="table-responsive">
           <table class="table table-hover mb-3">
@@ -122,18 +68,18 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="javascript:;" data-toggle="modal" data-target="#infoModal">獨居老人照護志工</a></td>
+                <td><a href="volunteer-item.html">獨居老人照護志工</a></td>
                 <td>居家關懷</td>
                 <td>2021-07-10 至 2021-07-30</td>
                 <td>獨居老人照護</td>
-                <td><button class="btn btn-outline-info btn-sm mr-2" data-toggle="modal" data-target="#infoModal" >查看</button></td>
+                <td><a href="volunteer-item.html" class="btn btn-outline-info btn-sm mr-2">詳情</a></td>
               </tr>
               <tr>
-                <td><a href="javascript:;" data-toggle="modal" data-target="#infoModal">興光里社區巡邏隊</a></td>
+                <td><a href="volunteer-item.html">興光里社區巡邏隊</a></td>
                 <td>社區巡守</td>
                 <td>2021-07-10 至 2021-07-30</td>
                 <td>社區安全巡邏</td>
-                <td><button class="btn btn-outline-info btn-sm mr-2" data-toggle="modal" data-target="#infoModal" >查看</button></td>
+                <td><a href="volunteer-item.html" class="btn btn-outline-info btn-sm mr-2">詳情</a></td>
               </tr>
             </tbody>
           </table>
@@ -277,50 +223,6 @@
   </div>
 </div>
 <!-- end offcanvas sidebar search --> 
-
-<!-- rent modal -->
-<div id="infoModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="rentInformation" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="rentInformation">招募標題</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-12">
-            <p class="mb-1"><strong>招募編號：</strong>004</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>招募種類：</strong>居家關懷</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>招募時間：</strong>2021-07-10 至 2021-07-30</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>招募對象：</strong>18歲以上有志人士</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>服務地點：</strong>里活動中心</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>服務時間：</strong>2021-08-10 至 2021-08-30</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>需求人數：</strong>3</p>
-          </div>
-        </div>
-        <hr>
-        <p>招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容</p>
-      </div>
-      <div class="modal-footer justify-content-center">
-        <a href="./volunteer-form.html" class="btn btn-info">申請志工</a>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- javascript --> 
 <script src="../assets/js/jquery-3.5.1.min.js"></script> 
