--- a/neighborhood/volunteer-service-item.html
+++ b/neighborhood/volunteer-service-item.html
@@ -95,7 +95,7 @@
   <!-- Page Content -->
   <div id="page-content-wrapper">
     <div class="container">
-      <h3 class="page-title text-center mb-4"><i class="las la-smile-beam mr-2"></i>志工招募</h3>
+      <h3 class="page-title text-center mb-4"><i class="las la-smile-beam mr-2"></i>志工服務</h3>
       <div class="row">
         <div class="col-sm-4">
           <div class="form-group">
