--- a/neighborhood/rent.html
+++ b/neighborhood/rent.html
@@ -60,7 +60,7 @@
           <a class="dropdown-item" href="/neighborhood/traffic.html">交通資訊</a>
           <a class="dropdown-item" href="javascript:;">好上進</a>
           <a class="dropdown-item" href="javascript:;">好安全</a>
-          <a class="dropdown-item" href="javascript:;">志工組織</a>
+          <a class="dropdown-item" href="/neighborhood/volunteer.html">志工組織</a>
         </div>
       </li>
       <li class="nav-item dropdown mr-3">
