--- a/neighborhood/volunteer-form.html
+++ b/neighborhood/volunteer-form.html
@@ -96,62 +96,76 @@
   <div id="page-content-wrapper">
     <div class="container">
       <h3 class="page-title text-center mb-4"><i class="las la-smile-beam mr-2"></i>志工招募</h3>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <select name="typeselect" id="typeselect" class="form-control">
-              <option>居家關懷</option>
-              <option>送餐服務</option>
-              <option>社區巡守</option>
-              <option>社區清潔</option>
-            </select>
+      <div class="card card-body tfs-15 mb-4 shadow">
+        <h5 class="text-center text-info mb-0">獨居老人照護志工</h5>
+        <span class="text-center tfs-13">如您有意願報名<strong class="mx-1 text-info">004</strong><strong class="mx-1 text-info">獨居老人照護志工</strong>，請填寫以下申請表</span>
+        <hr>
+        <div class="col-lg-6 mx-auto">
+          <h6 class="mb-3 text-center">申請表格</h6>
+          <div class="card card-body mb-4 shadow-sm" id="apply">
+            <div class="form-group mb-3">
+              <label>姓名 *</label>
+              <input type="text" class="form-control form-control-sm">
+            </div>
+            <div class="form-group mb-3">
+              <label>電話 *</label>
+              <input type="text" class="form-control form-control-sm">
+            </div>
+            <div class="form-group mb-3">
+              <label>性別 *</label>
+              <select class="form-control form-control-sm">
+                <option>選擇</option>
+                <option>男</option>
+                <option>女</option>
+                <option>其他</option>
+              </select>
+            </div>
+            <div class="form-group mb-3">
+              <label>出生年月日 *</label>
+              <input type="text" class="form-control form-control-sm">
+            </div>
+            <div class="form-group mb-3">
+              <label>身份證字號 *</label>
+              <input type="text" class="form-control form-control-sm">
+            </div>
+            <div class="form-group mb-3">
+              <label>電子郵件 *</label>
+              <input type="text" class="form-control form-control-sm">
+            </div>
+            <div class="form-group mb-3">
+              <label>通訊地址 *</label>
+              <input type="text" class="form-control form-control-sm">
+            </div>
+            <div class="form-group mb-3">
+              <label>學歷 *</label>
+              <select class="form-control form-control-sm">
+                <option>選擇</option>
+                <option>博士</option>
+                <option>碩士</option>
+                <option>大學</option>
+                <option>大學在學中</option>
+                <option>大學以下</option>
+              </select>
+            </div>
+            <div class="form-group mb-3">
+              <label>興趣與專⻑ *</label>
+              <textarea class="form-control" rows="3"></textarea>
+            </div>
+            <div class="form-group mb-3">
+              <label>志工經驗 *<small class="ml-1">(服務單位、服務時間、服務內容等)</small></label>
+              <textarea class="form-control" rows="8"></textarea>
+            </div>
+            <div class="form-group">
+              <label>附件檔案</label>
+              <input type="file" class="form-control-file tfs-13">
+            </div>
+            <p class="text-center mt-2 mb-2"><a href="#" class="btn btn-outline-info shadow" data-toggle="modal" data-target="#Modal-apply">送出申請</a></p>
           </div>
+          <!-- end card -->
         </div>
-      </div>
-      <div class="card card-body tfs-13 mb-4 shadow">
-        <div class="table-responsive">
-          <table class="table table-hover mb-3">
-            <thead>
-              <tr>
-                <th scope="col">招募標題</th>
-                <th scope="col">招募種類</th>
-                <th scope="col">招募時間</th>
-                <th scope="col">招募簡述</th>
-                <th scope="col">查看</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><a href="javascript:;" data-toggle="modal" data-target="#infoModal">獨居老人照護志工</a></td>
-                <td>居家關懷</td>
-                <td>2021-07-10 至 2021-07-30</td>
-                <td>獨居老人照護</td>
-                <td><button class="btn btn-outline-info btn-sm mr-2" data-toggle="modal" data-target="#infoModal" >查看</button></td>
-              </tr>
-              <tr>
-                <td><a href="javascript:;" data-toggle="modal" data-target="#infoModal">興光里社區巡邏隊</a></td>
-                <td>社區巡守</td>
-                <td>2021-07-10 至 2021-07-30</td>
-                <td>社區安全巡邏</td>
-                <td><button class="btn btn-outline-info btn-sm mr-2" data-toggle="modal" data-target="#infoModal" >查看</button></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <!-- end table-responsive -->
+        <!-- end col -->
       </div>
       <!-- end card -->
-      
-      <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center tfs-13">
-          <li class="page-item shadow disabled"> <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="las la-angle-left"></i></a> </li>
-          <li class="page-item shadow active"><a class="page-link" href="#">1</a></li>
-          <li class="page-item shadow"><a class="page-link" href="#">2</a></li>
-          <li class="page-item shadow"><a class="page-link" href="#">3</a></li>
-          <li class="page-item shadow"> <a class="page-link" href="#"><i class="las la-angle-right"></i></a> </li>
-        </ul>
-      </nav>
-      <!-- end pagination -->
       
       <footer class="footer">
         <div class="container my-auto">
@@ -278,49 +292,22 @@
 </div>
 <!-- end offcanvas sidebar search --> 
 
-<!-- rent modal -->
-<div id="infoModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="rentInformation" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="rentInformation">招募標題</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-12">
-            <p class="mb-1"><strong>招募編號：</strong>004</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>招募種類：</strong>居家關懷</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>招募時間：</strong>2021-07-10 至 2021-07-30</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>招募對象：</strong>18歲以上有志人士</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>服務地點：</strong>里活動中心</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>服務時間：</strong>2021-08-10 至 2021-08-30</p>
-          </div>
-          <div class="col-12">
-            <p class="mb-1"><strong>需求人數：</strong>3</p>
-          </div>
-        </div>
-        <hr>
-        <p>招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容招募內容</p>
-      </div>
-      <div class="modal-footer justify-content-center">
-        <a href="./volunteer-form.html" class="btn btn-info">申請志工</a>
+<!-- Modal apply -->
+<div class="modal fade" id="Modal-apply" tabindex="-1">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content text-center">
+      <div class="modal-body p-4">
+        <p class="text-orange mb-2"><i class="las la-check la-2x"></i></p>
+        <p class="mb-2">申請表已送出！</p>
+        <p class="tfs-13">感謝您的參與，相關單位會盡速審核您的申請內容而後通知結果</p>
+        <p class="m-0">
+          <button type="button" class="btn btn-outline-info btn-sm" data-dismiss="modal">確認</button>
+        </p>
       </div>
     </div>
   </div>
 </div>
+<!-- end modal-apply --> 
 
 <!-- javascript --> 
 <script src="../assets/js/jquery-3.5.1.min.js"></script> 
