--- a/neighborhood/volunteer-item.html
+++ b/neighborhood/volunteer-item.html
@@ -35,7 +35,7 @@
   
   <div class="nav-main collapse navbar-collapse order-3 order-md-2" id="navbarContent">
     <ul class="navbar-nav d-lg-flex flex-lg-row text-left ml-1 mr-auto">
-      <li class="nav-item active mr-3"> <a class="nav-link" href="index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
+      <li class="nav-item active mr-3"> <a class="nav-link" href="/index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
       <li class="nav-item dropdown mr-3">
         <a class="nav-link dropdown-toggle" href="javascript:;" id="foodDropdown" role="button" data-toggle="dropdown" aria-haspopup="fasle" class="dropdown-toggle">
           <i class="las la-cheese mr-1"></i>好美味
