--- a/neighborhood/volunteer.html
+++ b/neighborhood/volunteer.html
@@ -35,7 +35,7 @@
   
   <div class="nav-main collapse navbar-collapse order-3 order-md-2" id="navbarContent">
     <ul class="navbar-nav d-lg-flex flex-lg-row text-left ml-1 mr-auto">
-      <li class="nav-item active mr-3"> <a class="nav-link" href="index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
+      <li class="nav-item active mr-3"> <a class="nav-link" href="/index.html"><i class="las la-home mr-1"></i>萬芳智慧生活圈</a> </li>
       <li class="nav-item dropdown mr-3">
         <a class="nav-link dropdown-toggle" href="javascript:;" id="foodDropdown" role="button" data-toggle="dropdown" aria-haspopup="fasle" class="dropdown-toggle">
           <i class="las la-cheese mr-1"></i>好美味
@@ -58,8 +58,8 @@
           <a class="dropdown-item" href="/neighborhood/activity.html">里民通報</a>
           <a class="dropdown-item" href="/neighborhood/rent.html">租屋資訊</a>
           <a class="dropdown-item" href="/neighborhood/traffic.html">交通資訊</a>
-          <a class="dropdown-item" href="javascript:;">好上進</a>
-          <a class="dropdown-item" href="javascript:;">好安全</a>
+          <a class="dropdown-item" href="/education/index.html">好上進</a>
+          <a class="dropdown-item" href="/security/index.html">好安全</a>
           <a class="dropdown-item" href="/neighborhood/volunteer.html">志工組織</a>
         </div>
       </li>
