新增店家回覆

--- a/shop/store.html
+++ b/shop/store.html
@@ -96,8 +96,7 @@
   
   <!-- Page Content -->
   <div id="page-content-wrapper">
-    <div class="container-fluid">
-      <!-- <a href="#menu-toggle" class="btn btn-outline-dark btn-sm mb-3" id="menu-toggle">商店選單</a> -->
+    <div class="container">
       <div class="card card-body mb-3 px-3 pt-4">
         <div class="media">
           <img src="../assets/images/demo/shop-logo.png" alt="" width="86" height="auto" class="mr-4">
@@ -407,71 +406,86 @@
         <hr>
         <div class="google-store-review">
           <h4 class="mb-3">商店評價</h4>
-          <div class="media tfs-13 mb-3">
-            <img src="../assets/images/user-default.png" alt="" width="48" height="48" class="mr-3">
-            <div class="media-body">
-              <p class="mb-0"><strong>林小明</strong></p>
-              <p class="mb-0">2021-06-30</p>
-              <div class="stars text-orange mb-0">
-                <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star-half"></i>
+          <div class="media-item">
+            <div class="media tfs-13 mb-3">
+              <img src="../assets/images/user-default.png" alt="" width="48" height="48" class="mr-3">
+              <div class="media-body border-bottom">
+                <p class="mb-0">林小明</p>
+                <p class="mb-0">2021-06-30</p>
+                <div class="stars text-orange mb-0">
+                  <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star-half"></i>
+                </div>
+                <p>美式的部分在於店家環境、肉的原汁原味，其他麵包看起來頗台式。當天等了一點時間還沒上菜，店家主動說廚房出了一點問題，所以送上一碗湯，湯裡滿滿滿滿的⋯馬鈴薯⋯我不是很愛，但是湯算好喝。漢堡感覺像吃粗飽，沒有太多記憶點，吃到後來薯條感覺好撐。</p>
+                <!-- 店家回覆 -->
+                <p class="mb-0 text-info">店家回覆</p>
+                <p class="mb-0">2021-06-30</p>
+                <p>感謝！</p>
               </div>
-              <p>美式的部分在於店家環境、肉的原汁原味，其他麵包看起來頗台式。當天等了一點時間還沒上菜，店家主動說廚房出了一點問題，所以送上一碗湯，湯裡滿滿滿滿的⋯馬鈴薯⋯我不是很愛，但是湯算好喝。漢堡感覺像吃粗飽，沒有太多記憶點，吃到後來薯條感覺好撐。</p>
-              <!-- end stars -->
             </div>
           </div>
           <!-- end media -->
           <div class="media tfs-13 mb-3">
             <img src="../assets/images/user-default.png" alt="" width="48" height="48" class="mr-3">
-            <div class="media-body">
-              <p class="mb-0"><strong>andy chen</strong></p>
+            <div class="media-body border-bottom">
+              <p class="mb-0">andy chen</p>
               <p class="mb-0">2021-06-30</p>
               <div class="stars text-orange mb-0">
                 <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star-half"></i>
               </div>
               <p>滿滿美式風格 唱片、電吉他還有許多英文車牌等裝飾 讓整間店看起來非常的【美國】 用餐背景音樂就是用英文電台的聲音 讓店內飄散著濃濃的異國氛圍 彷彿離開台灣似的</p>
-              <!-- end stars -->
+              <!-- 店家回覆 -->
+              <p class="mb-0 text-info">店家回覆</p>
+              <p class="mb-0">2021-06-30</p>
+              <p>感謝！</p>
             </div>
           </div>
           <!-- end media -->
           <div class="media tfs-13 mb-3">
             <img src="../assets/images/user-default.png" alt="" width="48" height="48" class="mr-3">
-            <div class="media-body">
+            <div class="media-body border-bottom">
               <p class="mb-0">LIN COCO</p>
               <p class="mb-0">2021-06-30</p>
               <div class="stars text-orange mb-0">
                 <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star-half"></i>
               </div>
               <p>食物好吃，新鮮，價格實惠，2個人去點雞肉沙拉，牛奶炸雞跟1/3🐷肋排，1000元有找，文山區難得的美式餐廳</p>
-              <!-- end stars -->
+
+              <!-- 店家回覆 -->
+              <p class="mb-0 text-info">店家回覆</p>
+              <p class="mb-0">2021-06-30</p>
+              <p>感謝！</p>
             </div>
           </div>
           <!-- end media -->
           <div class="media tfs-13 mb-3">
             <img src="../assets/images/user-default.png" alt="" width="48" height="48" class="mr-3">
-            <div class="media-body">
+            <div class="media-body border-bottom">
               <p class="mb-0">陳大春</p>
               <p class="mb-0">2021-06-30</p>
               <div class="stars text-orange mb-0">
                 <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star-half"></i>
               </div>
               <p>很好吃，吃了會一吃再吃的店，而且很容易吃很撐得出店門口!用餐環境舒服，很美式的裝潢、有兒童餐具、餐椅~服務員親葉、餐點好吃美味。</p>
-              <!-- end stars -->
             </div>
           </div>
           <!-- end media -->
           <div class="media tfs-13 mb-3">
             <img src="../assets/images/user-default.png" alt="" width="48" height="48" class="mr-3">
-            <div class="media-body">
+            <div class="media-body border-bottom">
               <p class="mb-0">JOHNNY HU</p>
               <p class="mb-0">2021-06-30</p>
               <div class="stars text-orange mb-0">
                 <i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star"></i><i class="las la-star-half"></i>
               </div>
               <p>美式的部分在於店家環境、肉的原汁原味，其他麵包看起來頗台式。當天等了一點時間還沒上菜，店家主動說廚房出了一點問題，所以送上一碗湯，湯裡滿滿滿滿的⋯馬鈴薯⋯我不是很愛，但是湯算好喝。漢堡感覺像吃粗飽，沒有太多記憶點，吃到後來薯條感覺好撐。</p>
-              <!-- end stars -->
+              <!-- 店家回覆 -->
+              <p class="mb-0 text-info">店家回覆</p>
+              <p class="mb-0">2021-06-30</p>
+              <p>感謝您的評價。</p>
             </div>
           </div>
           <!-- end media -->
+
           <p class="text-right"><a href="#" target="_blank" class="btn btn-outline-dark btn-sm">更多<i class="las la-angle-right ml-1 mr-0"></i></a></p>
         </div>
         <!-- end store-review -->
